<resources>
    <string name="app_name">ComTrans</string>
    <string name="app_name_test">Must Inspect</string>
    <string name="loading">Пожалуйста, подождите</string>
    <string name="provider_authority">ru.comtrans.fileprovider</string>

    //////////////Drawer Items//////////////////////////////////////////////////
    <string name="nav_infoblocks">Мои инфоблоки</string>
    <string name="nav_profile">Профиль</string>
    <string name="nav_photo">Фото</string>
    <string name="nav_video">Видео</string>
    <string name="nav_logout">Выйти</string>
    <string name="nav_settings">Настройки</string>


    ////////////Login Activity, Registration, Forgot password//////////////////////////////////////
    <string name="email_hint">E-mail</string>
    <string name="email_correction_toast">Некорректный e-mail</string>
    <string name="password_registration_hint">Пароль (не менее 5 символов)</string>
    <string name="password_login_hint">Пароль</string>
    <string name="password_length_toast">Пароль должен быть не менее пяти символов</string>
    <string name="password_confirmation_toast">Пароли не совпадают</string>
    <string name="confirm_password_hint">Повторите пароль</string>
    <string name="register_hint">Зарегистрироваться</string>
    <string name="login_hint">Войти</string>
    <string name="forgot_password_hint">Забыли?</string>
    <string name="forgot_password_send_email_hint">Далее</string>
    <string name="forgot_password_close">Завершить</string>
    <string name="forgot_password_activity">Восстановление пароля</string>
    <string name="registration_activity">Регистрация</string>
    <string name="email_sent_text">На ваш Email\nбыло отправлено письмо\nдля восстановления пароля</string>


    ///////////////Request Task////////////////////////////////////
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="internet_not_exist">Отсутствует интернет!</string>
    <string name="title_activity_main">Профиль</string>


    /////////////Profile Fragment///////////////////////////////////
    <string name="hint_name">Ваше имя</string>
    <string name="hint_last_name">Ваша фамилия</string>
    <string name="hint_company_name">Название компании</string>
    <string name="hint_company_position">Должность</string>
    <string name="hint_telephone">Телефон</string>
    <string name="hint_save">Сохранить</string>
    <string name="profile_saved">Профиль сохранён</string>


    //////////////Main Activity/////////////////////////////////////
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="not_all_permissions_granted">Вы дали не все разрешения</string>
    <string name="must_to_choose_category">Вам необходимо выбрать категорию</string>
    <string name="must_to_choose_inspection">Вам необходимо выбрать тип осмотра</string>


    /////////////////Photo Activity///////////////////////////////////////
    <string name="photo_save_error">Фотография не сохранена, произошла ошибка.</string>

    <string name="prefix_photo">comtrans</string>
    <string name="prefix_video">vid_comtrans</string>
    <string name="prefix_defect">defect</string>
    <string name="photos_count">%1$d/%2$d фото</string>
    <string name="videos_count">%1$d/%2$d видео</string>
    <string name="photo_deleted">Фото успешно удалено</string>
    <string name="photo_not_deleted">Ошибка при удалении фото</string>
    <string name="video_deleted">Видео успешно удалено</string>
    <string name="video_not_deleted">Ошибка при удалении видео</string>
    <string name="skip">Пропустить</string>
    <string name="start">Начать</string>
    <string name="photo_blocked">Для продолжения фотографирования перейдите в ячейку добавления фото</string>
    <string name="video_blocked">Для продолжения cнятия видео перейдите в ячейку добавления видео</string>
    <string name="action_flash">Вспышка</string>
    <string name="default_defect_name">Дефект %d</string>
    <string name="default_defect_name_suffix">Коснитесь, чтобы переименовать</string>

    <string name="title_activity_gallery">Галерея</string>
    <string name="camera_portrait_blocked">Для выполнения съемки устройство\nдолжно быть расположено\nгоризонтально</string>


    /////////////////////////////Settings Fragment/////////////////////////
    <string name="enable_sending_without_wifi">Разрешить отправку данных по 3G/LTE</string>
    <string name="enable_sending_more_than_100">Разрешить отправку данных свыше 100м</string>


    ////////////////////////////AddOrEditInfoblockActivity/////////////////////
    <string name="add_or_edit_infoblock_activity_title">Добавление инфоблока</string>
    <string name="btn_previous">Назад</string>
    <string name="btn_next">Далее</string>
    <string name="btn_done">Отправить</string>
    <string name="no_mark_toast">Выберите марку!</string>
    <string name="no_mark_model_enaction_searchginemark_toast">Выберите марку ТС, модель ТС и марку двигателя!</string>


    //////////////////////////SearchValueActivity////////////////////////////////
    <string name="action_search">Поиск</string>
    <string name="action_add_property">Добавить</string>
    <string name="search_values_empty">Список пуст</string>
    <string name="add_value_hint">Введите значение</string>
    <string name="dialog_add_property_title">Добавление значения</string>
    <string name="dialog_negative_answer">Отмена</string>
    <string name="enter_value_toast">Введите желаемое значение</string>
    <string name="value_exist_toast">Значение уже есть в списке</string>
    <string name="not_chosen">Не выбран</string>


    ////////////////////InfoBlockAdapter////////////////////////////////////
    <string name="send_infoblock">Отправить</string>
    <string name="save_infoblock">Сохранить</string>
    <string name="infoblock_saving">Сохранение инфоблока</string>
    <string name="infoblock_deleting">Удаление инфоблока</string>
    <string name="warning_title">Внимание</string>
    <string name="required_warning_message">Заполните все обязательные поля обозначенные звездочкой в этом разделе инфоблока</string>
    <string name="bad_warning_message">Поля тип, марка, модель, гос.номер и год выпуска являются обязательными для заполнения</string>
    <string name="warning_message">Вы заполнили не все поля. Если все верно - жмите "Далее", если вы забыли заполнить какие-либо поля - заполните и жмите "Далее"</string>
    <string name="btn_stay">Остаться</string>
    <string name="choose_date">Выберите дату</string>
    <string name="incorrect_symbol_toast">Некорректный символ. Допускается ввод только латинских символов и цифр</string>
    <string name="incorrect_symbol_toast_for_model_PTS">Некорректный символ. Допускается ввод только заглавных латинских букв,цифр и спецсимволов  ( . ) ,( - ),( \\ ) .</string>
    <string name="phone_prefix">+7</string>
    <string name="phone_prefix_bracket">+7</string>
    <string name="phone_prefix_bracket_value">+7(%1$s</string>
    <string name="required_field">Обязательное поле</string>
    <string name="phone_invalid">Некорректный телефон</string>
    <string name="short_vin">Вы уверены, что VIN короче стандартного?</string>

    //////////////////////MyInfoblocksFragment//////////////////////////////////
    <string name="title_mark">Марка</string>
    <string name="title_model">Модель</string>
    <string name="title_year">Год выпуска</string>
    <string name="empty_text">Вы еще не добавляли инфоблоки ТС. Для добавления инфоблока, нажмите плюс в правом нижнем углу</string>
    <string name="status_draft">Черновик</string>
    <string name="status_sending">%1$s отправлено</string>
    <string name="status_stopped">Остановлено</string>
    <string name="status_sent">Принято</string>
    <string name="click_on_sending">Инфоблок отправляется. Пожалуйста, подождите</string>
    <string name="dialog_ellipsis">Выберите действие</string>
    <string name="dialog_neutral_label">Отмена</string>

    <string name="dialog_send">Отправить</string>
    <string name="dialog_delete">Удалить</string>
    <string name="dialog_neutral">Отмена</string>
    <string name="dialog_restore">Возобновить</string>
    <string name="dialog_send_email">Отправить e-mail</string>

    <string name="toast_settings_data_not_enabled">Для отправки инфоблока размером больше 100мб нужно выставить разрешение в настройках</string>
    <string name="toast_settings_wifi_not_enabled">Для отправки инфоблока через мобильные сети нужно выставить разрешение в настройках</string>
    <string name="toast_weak_internet">Ваше подключение неустойчиво</string>
    <string name="toast_not_connected_to_internet">Отсутствует интернет подключение</string>

    <string name="choose_type_title">Выберите тип ТС</string>
    <string name="choose_category_title">Выберите категорию</string>
    <string name="choose_inspection_type_title">Выберите вид осмотра</string>
    <string name="vehicle_type_not_exist">Не подгружены типы ТС</string>
    <string name="inspection_type_not_exist">Не подгружены виды осмотра</string>


    <string name="choose_from_list">Выбирите из списка</string>





    //////////////////////InfoBlockTutorialFragment//////////////////////////////
    <string name="tutorial_title">Порядок добавления\nнового инфоблока</string>
    <string name="tutorial_text">1.Выберите из списка или введите соответствующее значение в каждое поле\n\n2.Добавьте необходимые фотографии\n\n3.Нажмите "Далее"</string>
    <string name="tutorial_confirm">Понятно</string>


    ////////////SendingService//////////////////////////////
    <string name="sending_notification_title">Отправка инфоблока</string>
    <string name="sending_notification_text">Отправка…</string>
    <string name="sending_notification_done">Отправка завершена</string>
    <string name="sending_notification_failed">Отправка не удалась</string>



    ////////////////ShowInfoBlockActivity/////////////////////////////
    <string name="show_info_block_title">Просмотр инфоблока</string>




    //////////////Tutorial/////////////////////////////
    <string name="step_1">Шаг 1</string>

    <string name="step_2">Шаг 2</string>

    <string name="step_3">Шаг 3</string>
    <string name="btn_clear">Понятно</string>
    <string name="photo_second_text">Прочтите описание объекта\nсъемки (1) и сделайте его\nфото, используя белую кнопку\n(2)</string>

    <string name="photo_third_text">Для того, что бы удалить или\nпереснять сделанное фото\nнажмите на ячейку,\nв которой оно сохранено (1), чтобы\nпропустить фото - на ячейку,\n фото которой вы хотите\n сделать (2)</string>
    <string name="defect_second_text">Для фотографирования дефектов\nиспользуйте красную кнопку (1), чтобы\nвернуться к фотографированию\nобъектов, нажмите на нужную ячейку с\nописанием объекта (2)</string>
    <string name="defect_third_text">Для переименования\nдефекта, перейдите в\nячейку с фото дефекта (1) и\n тапните по названию (2)</string>

    <string name="video_second_text">Для съемки видео, выберите\nсоответсвующую ячейку и тапните\nпо кнопке (1). Объект для съемки\nуказан в описании к видео (2)</string>
    <string name="video_third_text">Для того, чтобы переснять\nвидео, войдите в ячейку с\nуже сделанным видео (1)и\nиспользуйте иконки\nредактирования (2)</string>

    <string name="accepted_numbers_toast">Разрешенные для ввода символы: 0 1 2 3 4 5 6 7 8 9 A B C D E F G H J K L M N P R S T U V W X Y Z</string>


    <string name="API_URL">http://rc.100fur.ru/ru/api/</string>
</resources>

