<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/hint_fio"
        android:id="@+id/et_fio"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/hint_company_name"
        android:id="@+id/et_company"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/hint_company_position"
        android:id="@+id/et_company_position"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_telephone"
        android:id="@+id/et_telephone"
        android:inputType="phone" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_save"
        android:id="@+id/btn_save"/>




</LinearLayout>