<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/login_input_layout_side_padding"
        android:paddingStart="@dimen/login_input_layout_side_padding"
        android:paddingEnd="@dimen/login_input_layout_side_padding"
        android:paddingRight="@dimen/login_input_layout_side_padding"
        android:layout_centerInParent="true"
        android:id="@+id/input_layout"
        android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:theme="@style/TextLabelLogin"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint"
                    android:id="@+id/et_email"/>

            </android.support.design.widget.TextInputLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:theme="@style/TextLabelLogin"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingRight="80dp"
                android:paddingEnd="80dp"
                android:hint="@string/password_login_hint"
                android:id="@+id/et_password"/>



        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_hint"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorPrimaryDark"
            android:background="@null"
            android:layout_centerVertical="true"
            android:id="@+id/btn_forgot_password"/>


    </RelativeLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            android:text="@string/login_hint"
            android:id="@+id/btn_login"/>


    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_hint"
        android:textAllCaps="false"
        android:textSize="@dimen/register_button_text_size"
        android:layout_marginBottom="@dimen/register_button_bottom_margin"
        android:textColor="@color/colorSecondary"
        android:background="@null"
        android:layout_alignParentBottom="true"
        android:id="@+id/btn_register"/>



</RelativeLayout>
