<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="15dp">
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/button_close"
        android:src="@drawable/ic_close"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/tutorial_title"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_tutorial"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="@string/tutorial_text"/>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/button_confirm"
           android:background="@color/colorPrimary"
           android:text="@string/tutorial_confirm"
           android:textColor="@android:color/white"
           android:textSize="16sp"
           android:textAllCaps="false"
           android:layout_alignParentBottom="true"/>
   </RelativeLayout>

</LinearLayout>