<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xelentec.a100fur.activities.RegistrationActivity">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/register_activity_input_top_margin"
            android:paddingLeft="@dimen/login_input_layout_side_padding"
            android:paddingStart="@dimen/login_input_layout_side_padding"
            android:paddingEnd="@dimen/login_input_layout_side_padding"
            android:paddingRight="@dimen/login_input_layout_side_padding">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/TextLabel"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:hint="@string/email_hint"
                    android:drawableEnd="@drawable/ic_pen"
                    android:drawableRight="@drawable/ic_pen"
                    android:id="@+id/et_email"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/TextLabel"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:hint="@string/password_login_hint"
                    android:drawableEnd="@drawable/ic_pen"
                    android:drawableRight="@drawable/ic_pen"
                    android:id="@+id/et_password"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/TextLabel"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:drawableEnd="@drawable/ic_pen"
                    android:drawableRight="@drawable/ic_pen"
                    android:hint="@string/confirm_password_hint"
                    android:inputType="textPassword"
                    android:id="@+id/et_confirm_password"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/login_input_layout_side_padding"
            android:layout_marginEnd="@dimen/login_input_layout_side_padding"
            android:layout_marginLeft="@dimen/login_input_layout_side_padding"
            android:layout_marginStart="@dimen/login_input_layout_side_padding"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@color/colorSecondary"
            android:layout_marginBottom="@dimen/forgot_password_button_bottom_margin"
            android:text="@string/register_hint"
            android:layout_alignParentBottom="true"
            android:id="@+id/btn_register"/>





    </RelativeLayout>



</LinearLayout>
