<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:id="@+id/info_block_image"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/info_block_image"
            android:layout_toRightOf="@id/info_block_image">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/info_block_status"
                    android:textColor="@color/blue"
                    android:text="Sending"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_block_date"
                    android:textColor="@color/green"
                    android:layout_alignBottom="@id/info_block_status"
                    android:text="11.11.11"
                    android:textSize="11sp"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mark_layout"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_mark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:id="@+id/info_block_mark"
                        android:textColor="@color/colorPrimary"
                        android:text="КамАЗ"
                        android:singleLine="true"
                        android:maxLength="10"
                        android:ellipsize="end"
                        android:textSize="18sp"/>




                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/mark_layout"
                    android:layout_toRightOf="@id/mark_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_model"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/info_block_model"
                        android:layout_marginTop="5dp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:text="8560-354345-543"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textSize="18sp"/>


                </LinearLayout>




            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_year"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_block_year"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="сен. 2015"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textSize="18sp"/>




            </LinearLayout>



        </LinearLayout>
        
        
        
        
    </RelativeLayout>



</android.support.v7.widget.CardView>